kubernetes/manifests/fluxcd/templates/capacitor-ui.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: fluxcd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Replace with your ClusterIssuer name
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - flux.k8s.nullservers.com
      secretName: capacitor-tls
  rules:
    - host: flux.k8s.nullservers.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
