kubernetes/manifests/fluxcd/templates/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - ingress
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress-nginx
  egress:
    - toEntities:
        - kube-apiserver
        - cluster
    - toFQDNs:
        - matchPattern: "*.ghcr.io"
        - matchPattern: "*.github.com"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
